docs/api/graphql/v1/operations/mutations/delete-group.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: delete-group
title: deleteGroup
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};








Delete a group.

Only groups with the `CUSTOM` role can be deleted. The built-in `organization_admin` and
`organization_viewer` groups are permanent and cannot be removed. All members lose the
access granted by this group immediately upon deletion. Requires `organization_admin` permissions.


```graphql
deleteGroup(
  organizationId: ID!
  id: ID!
): GroupPayload
```




### Arguments

#### [<code style={{ fontWeight: 'normal' }}>deleteGroup.<b>organizationId</b></code>](#organization-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#organization-id\} 
Your organization's unique identifier.


#### [<code style={{ fontWeight: 'normal' }}>deleteGroup.<b>id</b></code>](#id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#id\} 
The group's unique identifier.


### Type

#### [<code style={{ fontWeight: 'normal' }}><b>GroupPayload</b></code>](/api/graphql/v1/types/objects/group-payload.mdx) <Badge class="badge badge--secondary " text="object"/>